syntax = "proto3";

package chat.v1;

option go_package = "chat_service/internal/pb/chat/v1;chatv1";

service ChatSrv {
  rpc CreateChat(CreateChatIn) returns (CreateChatOut);
  rpc GetChats(GetChatsIn) returns (GetChatsOut);
  rpc GetChat(GetChatIn) returns (GetChatOut);
  rpc GetChatHistory(GetChatHistoryIn) returns (GetChatHistoryOut);
}

message CreateChatIn {
  string name = 1;
  string description = 2;
  string patient_id = 3;
  repeated string participant_ids = 4;
}

message CreateChatOut {
  string chat_id = 1;
}

message GetChatIn {
  string chat_id = 1;
}

message Chat {
  string id = 1;
  string name = 2;
  string description = 3;
  string patient_id = 4;
  repeated string participant_ids = 5;
  string created_at = 6;
}

message GetChatOut {
  Chat chat = 1;
}

message GetChatsIn {
  string doctor_id = 1;
}

message GetChatsOut {
  repeated Chat chats = 1;
}

message Message {
  string id = 1;
  string chat_id = 2;
  string sender_id = 3;
  string content = 4;
  string created_at = 5;
}

message GetChatHistoryIn {
  string chat_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetChatHistoryOut {
  repeated Message messages = 1;
}